Setting up javascript

--- a/index.html
+++ b/index.html
@@ -67,25 +67,23 @@
                   <p>48</p>
                 </div>
               </div>
-              <h3 class="repos-heading">
-                Repositories
-              </h3>
-              <div class="repos-container">
-                <ul>
-                  <a href="#">
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                    <li>Repo 1</li>
-                  </a>
-                </ul>
-              </div>
+            </div>
+            <h3 class="repos-heading">
+              Repositories
+            </h3>
+            <div class="repos-container">
+              <ul>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+                <a href="#"><li>Repo 1</li></a>
+              </ul>
             </div>
           </div>
         </div>
